CRM-3329: remove extra variables

--- a/src/OroCRMPro/Bundle/FusionChartsBundle/Resources/views/Chart/multiline.html.twig
+++ b/src/OroCRMPro/Bundle/FusionChartsBundle/Resources/views/Chart/multiline.html.twig
@@ -71,9 +71,8 @@
                 ],
                 function ($, mediator, multipleHandler) {
                     mediator.once('page:afterChange', function() {
-                        var i, data = {{ json|json_encode|raw }};
                         var handler = new multipleHandler(
-                                data,
+                                {{ json|json_encode|raw }},
                                 {{ options|json_encode|raw }},
                                 {{ oro_currency_symbol_prepend()|json_encode|raw }}
                         );
